--- a/package.json
+++ b/package.json
@@ -21,20 +21,28 @@
   },
   "homepage": "https://github.com/DannySofftie/tickles-adx#readme",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
-    "mongoose": "^5.0.7",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.1.7",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.6.7",
     "ws": "^5.1.1"
   },
   "maintainers": [
     "Danny Sofftie"
   ],
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/cors": "^2.8.3",
     "@types/express": "^4.11.1",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/mongoose": "^5.0.7",
+    "@types/multer": "^1.3.7",
     "@types/node": "^9.6.2",
+    "@types/nodemailer": "^4.6.2",
     "@types/ws": "^4.0.2"
   },
   "engines": {
