--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "models/": true,
         "node_modules/": true,
         "routes/": true,
-        "utils/": true
+        "utils/": true,
+        "api/": true
     }
 }
