--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,24 +13,33 @@
         /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
         // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
-        "downlevelIteration": true, /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
+        "downlevelIteration": true,
+        /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
         // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
         /* Strict Type-Checking Options */
         "strict": true,
         /* Enable all strict type-checking options. */
-        "noImplicitAny": false, /* Raise error on expressions and declarations with an implied 'any' type. */
-        "strictNullChecks": false, /* Enable strict null checks. */
+        "noImplicitAny": false,
+        /* Raise error on expressions and declarations with an implied 'any' type. */
+        "strictNullChecks": false,
+        /* Enable strict null checks. */
         // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
-        "noImplicitThis": true, /* Raise error on 'this' expressions with an implied 'any' type. */
-        "alwaysStrict": true, /* Parse in strict mode and emit "use strict" for each source file. */
+        "noImplicitThis": true,
+        /* Raise error on 'this' expressions with an implied 'any' type. */
+        "alwaysStrict": true,
+        /* Parse in strict mode and emit "use strict" for each source file. */
         /* Additional Checks */
         // "noUnusedLocals": true, /* Report errors on unused locals. */
-        "noUnusedParameters": false, /* Report errors on unused parameters. */
-        "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-        "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+        "noUnusedParameters": false,
+        /* Report errors on unused parameters. */
+        "noImplicitReturns": true,
+        /* Report error when not all code paths in function return a value. */
+        "noFallthroughCasesInSwitch": true,
+        /* Report errors for fallthrough cases in switch statement. */
         /* Module Resolution Options */
         "moduleResolution": "node",
-        "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
+        "experimentalDecorators": true,
+        /* Enables experimental support for ES7 decorators. */
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     },
     "exclude": [
