--- a/package.json
+++ b/package.json
@@ -25,23 +25,25 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
+    "formidable": "^1.2.1",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.1.7",
-    "multer": "^1.3.0",
+    "mongoose": "^5.2.3",
+    "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
-    "ws": "^5.1.1"
+    "ws": "^5.2.2"
   },
   "maintainers": [
     "Danny Sofftie"
   ],
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
-    "@types/cors": "^2.8.3",
-    "@types/express": "^4.11.1",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/mongoose": "^5.0.7",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/formidable": "^1.0.31",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/mongoose": "^5.2.0",
     "@types/multer": "^1.3.7",
-    "@types/node": "^9.6.2",
+    "@types/node": "^9.6.23",
     "@types/nodemailer": "^4.6.2",
     "@types/ws": "^4.0.2"
   },
