--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mongoose": "^5.2.3",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
+    "paypal-rest-sdk": "^1.8.1",
+    "stripe": "^6.2.1",
     "ws": "^5.2.2"
   },
   "maintainers": [
@@ -45,6 +47,8 @@
     "@types/multer": "^1.3.7",
     "@types/node": "^9.6.23",
     "@types/nodemailer": "^4.6.2",
+    "@types/paypal-rest-sdk": "^1.7.2",
+    "@types/stripe": "^5.0.18",
     "@types/ws": "^4.0.2"
   },
   "engines": {
