--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "homepage": "https://github.com/DannySofftie/tickles-adx#readme",
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "bcrypt": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
     "formidable": "^1.2.1",
+    "googleapis": "^32.0.0",
+    "ip2location-nodejs": "^8.1.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.3",
     "multer": "^1.3.1",
@@ -39,6 +43,7 @@
   ],
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/formidable": "^1.0.31",
