--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
         "strictNullChecks": false,
         /* Enable strict null checks. */
         // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
-        "noImplicitThis": true,
+        "noImplicitThis": false,
         /* Raise error on 'this' expressions with an implied 'any' type. */
         "alwaysStrict": true,
         /* Parse in strict mode and emit "use strict" for each source file. */
