--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
   },
   "homepage": "https://github.com/DannySofftie/tickles-adx#readme",
   "dependencies": {
-    "@google/maps": "^0.5.5",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
-    "formidable": "^1.2.1",
-    "googleapis": "^32.0.0",
     "ip2location-nodejs": "^8.1.3",
-    "jsonwebtoken": "^8.3.0",
+    "jimp": "^0.3.2",
     "mongoose": "^5.2.6",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
